adding in some more stuff

--- a/linear/linearexam2.tex
+++ b/linear/linearexam2.tex
@@ -266,6 +266,9 @@ $\det(A) = \sum_{j=1}^n a_{ij} C_{ij}$, where $C_{ij} = (-1)^{i+j} \det(A_{ij})$
     \item $A$ is invertible $\iff \det(A) \neq 0$.
     \item $\det(AB) = \det(A) \det(B)$.
     \item $\det(A^T) = \det(A)$.
+    \item \textbf{Quiz 8:} $\det(A^k) = (\det(A))^k$.
+    \item \textbf{Quiz 8:} $\det(A^{-1}) = 1/\det(A)$.
+    \item \textbf{Quiz 8:} $\det(kA) = k^n \det(A)$ (for $A_{n \times n}$).
 \end{itemize}
 \end{thmbox}
 
@@ -287,7 +290,6 @@ $\det(A) = \sum_{j=1}^n a_{ij} C_{ij}$, where $C_{ij} = (-1)^{i+j} \det(A_{ij})$
 \end{itemize}
 \end{thmbox}
 
-% --- NEW EXAMPLES ADDED HERE ---
 \section*{XI. Additional Examples}
 
 \begin{exbox}
