--- a/linear/linearexam2.tex
+++ b/linear/linearexam2.tex
@@ -1,206 +1,374 @@
-\documentclass[9pt]{extarticle} % Smaller base font for maximum density
+\documentclass[10pt]{article}
 \usepackage[T1]{fontenc}
-\usepackage{amsmath, amssymb}
-\usepackage[letterpaper, margin=0.3in]{geometry} % Extreme margins
-\usepackage{multicol}
-\usepackage{enumitem}
-\usepackage[dvipsnames]{xcolor}
-\usepackage[most]{tcolorbox}
+\usepackage{amsmath, amssymb, array} % For math, symbols, and array formatting
+\usepackage[letterpaper, margin=0.45in]{geometry} % Minimized margins for max content
+\usepackage{multicol} % Essential for two-column layout
+\usepackage{enumitem} % For custom list spacing
+\usepackage[dvipsnames]{xcolor} % For custom colors
+\usepackage[most]{tcolorbox} % For styled boxes
+\usepackage{titlesec} % For custom section titles
+\usepackage{booktabs} % For better table rules (if needed)
 
-% --- COMPACT LISTS ---
-\setlist{nosep, leftmargin=*, topsep=0pt, partopsep=0pt}
+% --- LAYOUT & FONT ---
+\setlength{\columnsep}{10pt} % Space between columns
+\setlist{nosep, topsep=2pt, parsep=0pt, leftmargin=*} % Extremely compact lists
+\titlespacing*{\section}{0pt}{*1.5}{*1} % Tighter section spacing
+\titleformat*{\section}{\large\bfseries\sffamily} % Section font
+\pagestyle{empty} % No page numbers
 
-% --- NO INDENT / SPACING ---
-\setlength{\parindent}{0pt}
-\setlength{\parskip}{2pt}
-\setlength{\columnsep}{0.2in}
+% --- THEME COLORS ---
+\definecolor{boxbg}{gray}{0.95}
+\definecolor{myblue}{named}{Blue}
+\definecolor{mygreen}{named}{OliveGreen}
+\definecolor{myred}{named}{Red}
+\definecolor{myyellow}{named}{Apricot}
 
-% --- COLORS (High Contrast for Readability) ---
-\definecolor{algo_bg}{HTML}{F0F8FF} % AliceBlue
-\definecolor{algo_frame}{HTML}{4682B4} % SteelBlue
-\definecolor{check_bg}{HTML}{FFF0F5} % LavenderBlush
-\definecolor{check_frame}{HTML}{C71585} % MediumVioletRed
-
-% --- CUSTOM BOXES ---
-% "Algorithm" Box - For Step-by-Step Instructions
-\newtcolorbox{algobox}[1]{
+% --- CUSTOM TCOLORBOX STYLES ---
+% Definition Box (Green)
+\newtcolorbox{defbox}{
     enhanced,
-    colback=algo_bg,
-    colframe=algo_frame,
-    fonttitle=\bfseries\sffamily,
-    title={#1},
-    attach boxed title to top left={yshift=-2mm, xshift=2mm},
-    boxed title style={boxrule=0.5pt},
+    colback=mygreen!5!white,
+    colframe=mygreen!75!black,
     boxrule=0.5pt,
-    left=2pt, right=2pt, top=8pt, bottom=2pt,
-    arc=0pt, outer arc=0pt,
+    fonttitle=\bfseries\sffamily,
+    coltitle=white,
+    colbacktitle=mygreen!80!black,
+    attach boxed title to top left={yshift=-2mm, xshift=3mm},
+    boxed title style={boxrule=0.5pt, frame code={}},
+    title=Definition,
+    sharp corners,
+    breakable
+}
+% Theorem Box (Blue)
+\newtcolorbox{thmbox}{
+    enhanced,
+    colback=myblue!5!white,
+    colframe=myblue!75!black,
+    boxrule=0.5pt,
+    fonttitle=\bfseries\sffamily,
+    coltitle=white,
+    colbacktitle=myblue!80!black,
+    attach boxed title to top left={yshift=-2mm, xshift=3mm},
+    boxed title style={boxrule=0.5pt, frame code={}},
+    title=Theorem,
+    sharp corners,
+    breakable
+}
+% Example Box (Red)
+\newtcolorbox{exbox}{
+    enhanced,
+    colback=myred!5!white,
+    colframe=myred!75!black,
+    boxrule=0.5pt,
+    fonttitle=\bfseries\sffamily,
+    coltitle=white,
+    colbacktitle=myred!80!black,
+    attach boxed title to top left={yshift=-2mm, xshift=3mm},
+    boxed title style={boxrule=0.5pt, frame code={}},
+    title=Example,
+    sharp corners,
     breakable
 }
 
-% "Sanity Check" Box - Quick Tests & Warnings
-\newtcolorbox{checkbox}[1]{
-    enhanced,
-    colback=check_bg,
-    colframe=check_frame,
-    fonttitle=\bfseries\sffamily,
-    title={#1},
-    attach boxed title to top left={yshift=-2mm, xshift=2mm},
-    boxed title style={boxrule=0.5pt},
-    boxrule=0.5pt,
-    left=2pt, right=2pt, top=8pt, bottom=2pt,
-    arc=0pt, outer arc=0pt,
-    breakable
-}
+% --- TITLE ---
+\title{\textbf{\Huge MATH 231: Cumulative Review Sheet (Ch 1-5)}}
+\author{Based on Lay, Lay, McDonald (6th Ed.)}
+\date{Fall 2025}
 
 \begin{document}
-% --- HEADER ---
-\textbf{\large MATH 231: FINAL EXAM PROCEDURAL REFERENCE} \hfill \textit{Battle Plan v1.0}
-\hrule
-\vspace{4pt}
+\maketitle
+\thispagestyle{empty}
+\scriptsize 
 
-\begin{multicols}{2}
+% --- WRAP EVERYTHING IN ONE MULTICOLS ENVIRONMENT ---
+\begin{multicols}{2} 
 
-% ============================================================
-% SECTION 1: EIGENVALUES & EIGENVECTORS (The Hard Part)
-% ============================================================
-
-\begin{algobox}{ALGORITHM: Finding Eigenvalues ($\lambda$) (3x3)}
-\textbf{Goal:} Solve $\det(A - \lambda I) = 0$.
-\begin{enumerate}
-    \item \textbf{Setup:} Write matrix $A - \lambda I$. (Subtract $\lambda$ from diagonal).
-    \item \textbf{Scan for Zeros:} Is there a row/col with two zeros? Expand along that immediately.
-    \item \textbf{The "Factor First" Trick:} Before expanding, look at rows. Can you perform $R_i + R_j$ or $R_i - R_j$ to create a common factor?
-    \item \textbf{Expand:} Result will be a cubic: $-\lambda^3 + c_2\lambda^2 - c_1\lambda + c_0 = 0$.
-    \item \textbf{Solve for Roots:}
-    \begin{itemize}
-        \item If you factored out $(\lambda - k)$ earlier, $\lambda=k$ is one root.
-        \item \textbf{Rational Root Thm:} Test integer factors of the constant term $c_0$ (e.g., $\pm 1, \pm 2$).
-        \item Use polynomial long division to reduce cubic to quadratic.
-    \end{itemize}
-\end{enumerate}
-\end{algobox}
-
-\begin{algobox}{ALGORITHM: Finding Eigenvectors ($\mathbf{x}$)}
-\textbf{Goal:} Find basis for $\text{Nul}(A - \lambda I)$ for each $\lambda$.
-\begin{enumerate}
-    \item Plug one specific $\lambda$ value back into matrix $A - \lambda I$.
-    \item \textbf{Row Reduce} this matrix. (You \emph{must} get at least one row of zeros. If not, your $\lambda$ is wrong).
-    \item Write equations (e.g., $x_1 - 2x_3 = 0 \implies x_1 = 2x_3$).
-    \item \textbf{Parametric Vector Form:} Separation variables.
-    $$ \mathbf{x} = x_2 \begin{bmatrix} \dots \end{bmatrix} + x_3 \begin{bmatrix} \dots \end{bmatrix} $$
-    \item The vectors are your eigenvectors.
-\end{enumerate}
-\end{algobox}
-
-\begin{checkbox}{QUICK CHECK: Triangular Matrices}
-If $A$ is Upper or Lower Triangular:
+\section*{I. Systems and RREF (1.1, 1.2)}
+\begin{defbox}
 \begin{itemize}
-    \item \textbf{Eigenvalues} = The entries on the main diagonal.
-    \item \textbf{Determinant} = Product of diagonal entries.
-    \item \textbf{Do not} compute characteristic poly. Just read them off.
+    \item \textbf{System:} A collection of linear equations.
+    \item \textbf{Consistent/Inconsistent:} Has $\ge 1$ solution / Has no solution.
+    \item \textbf{RREF (Reduced Echelon Form):} Unique matrix where pivots $= 1$ are the only nonzero entry in their column.
+    \item \textbf{Pivot Column/Position:} Location containing a leading $1$ in the RREF.
+    \item \textbf{Basic/Free Variable:} Corresponds to a pivot/non-pivot column.
 \end{itemize}
-\end{checkbox}
+\end{defbox}
 
-% ============================================================
-% SECTION 2: RANK, NULLITY & BASES
-% ============================================================
-
-\begin{algobox}{ALGORITHM: Rank, Nullity, Col(A), Nul(A)}
-Given matrix $A$:
-\begin{enumerate}
-    \item \textbf{Step 1: Row Reduce} $A$ to REF (doesn't need to be RREF yet).
-    \item \textbf{Step 2: Identify Pivots.} Circle leading 1s.
-    \item \textbf{RANK} = Count of Pivots.
-    \item \textbf{NULLITY} = (Total Columns) - (Rank).
-    \item \textbf{BASIS for Col(A):}
-    \begin{itemize}
-        \item Look at REF. Which columns have pivots? (e.g., 1 and 3).
-        \item Go back to \textbf{ORIGINAL} matrix $A$.
-        \item Pick columns 1 and 3 from \textbf{original} $A$.
-    \end{itemize}
-    \item \textbf{BASIS for Nul(A):}
-    \begin{itemize}
-        \item Go to RREF.
-        \item Identify Free Variables (cols without pivots).
-        \item Write Basic Variables in terms of Free Variables.
-        \item Extract vectors (PVF). These are the basis.
-    \end{itemize}
-\end{enumerate}
-\end{algobox}
-
-% ============================================================
-% SECTION 3: DETERMINANTS & INVERSES
-% ============================================================
-
-\begin{algobox}{ALGORITHM: Determinant Strategy}
-\begin{enumerate}
-    \item \textbf{2x2:} $ad - bc$.
-    \item \textbf{3x3 or larger:}
-    \begin{itemize}
-        \item \textbf{Row Ops Strategy (Fastest):} Use row replacements ($R_i + kR_j$) to create zeros below a pivot. (Does NOT change det).
-        \item \textbf{Swap?} Multiply result by $-1$.
-        \item \textbf{Scale?} Factor out $k$.
-        \item Once Triangular: Multiply diagonal entries.
-    \end{itemize}
-    \item \textbf{Cofactor Expansion:} Only do this if a row/col already has many zeros.
-    $$ \det(A) = a_{11}C_{11} + a_{12}C_{12} + \dots $$
-\end{enumerate}
-\end{algobox}
-
-\begin{algobox}{ALGORITHM: Inverse Matrix ($A^{-1}$)}
-\begin{enumerate}
-    \item \textbf{2x2 Shortcut:}
-    $$ \begin{bmatrix} a & b \\ c & d \end{bmatrix}^{-1} = \frac{1}{ad-bc} \begin{bmatrix} d & -b \\ -c & a \end{bmatrix} $$
-    \item \textbf{3x3+ Algorithm:}
-    \begin{itemize}
-        \item Augment: $[ A \mid I ]$.
-        \item Row Reduce until left side is $I$: $[ I \mid A^{-1} ]$.
-        \item If you create a row of zeros on the left, $A$ is not invertible.
-    \end{itemize}
-\end{enumerate}
-\end{algobox}
-
-% ============================================================
-% SECTION 4: LINEAR INDEPENDENCE
-% ============================================================
-
-\begin{checkbox}{TEST: Linear Independence}
-Set of vectors $\{\mathbf{v}_1, \dots, \mathbf{v}_p\}$.
-\begin{enumerate}
-    \item \textbf{Matrix Check:} Form $A = [\mathbf{v}_1 \dots \mathbf{v}_p]$.
-    \item Row reduce.
-    \item \textbf{Pivot in every column?} $\to$ Independent.
-    \item \textbf{Free variable exists?} $\to$ Dependent.
-\end{enumerate}
-\textbf{Instant Checks (Dependent if...):}
+\begin{thmbox}
+\textbf{Thm 1.2: Existence and Uniqueness}
 \begin{itemize}
-    \item More vectors than rows ($p > n$).
-    \item The set contains the $\mathbf{0}$ vector.
-    \item One vector is a scalar multiple of another.
+    \item \textbf{Existence (Consistency):} System is consistent $\iff [A \mid \mathbf{b}]$ has \textbf{NO pivot in the rightmost column}.
+    \item \textbf{Uniqueness:} If consistent: Unique Sol. $\iff$ No free variables. Infinite Sol. $\iff$ At least one free variable.
 \end{itemize}
-\end{checkbox}
+\end{thmbox}
 
-% ============================================================
-% SECTION 5: COMMON "TRICK" QUESTIONS
-% ============================================================
+\begin{exbox}
+\textbf{Pivot/Free Variables}
+$$
+\text{RREF: } \begin{bmatrix}
+\mathbf{1} & 0 & 3 & 0 & 5 \\
+0 & \mathbf{1} & 2 & 0 & -3 \\
+0 & 0 & 0 & \mathbf{1} & 0
+\end{bmatrix} \text{}
+$$
+\begin{itemize}
+    \item \textbf{Basic Variables:} $x_1, x_2, x_4$ (Pivots in Cols 1, 2, 4).
+    \item \textbf{Free Variable:} $x_3$ (Non-Pivot Col 3).
+    \item \textbf{Consistency:} Rightmost column (col 5) is NOT a pivot, so consistent.
+\end{itemize}
+\end{exbox}
 
-\begin{checkbox}{"Is $\lambda$ an eigenvalue?"}
-\textbf{Don't} find characteristic poly!
+\section*{II. Vectors, Span, and $\mathbf{Ax=b}$ (1.3, 1.4)}
+
+\begin{thmbox}
+\textbf{Thm 1.3: Equivalence of Views}
+The linear system, the vector equation ($x_1 \mathbf{a}_1 + \dots + x_n \mathbf{a}_n = \mathbf{b}$), and the matrix equation ($A\mathbf{x} = \mathbf{b}$) \textbf{all share the same solution set}.
+$\mathbf{b}$ is in Span$\{\mathbf{a}_1, \dots, \mathbf{a}_n\}$ $\iff A\mathbf{x} = \mathbf{b}$ is consistent.
+
+\textbf{Thm 1.4: Span $\mathbb{R}^m$ Equivalence}
+Let $A$ be $m \times n$. The following are equivalent:
 \begin{enumerate}
-    \item Calculate matrix $A - \lambda I$.
-    \item Does this matrix have a non-trivial null space? (i.e., is it singular? Is $\det = 0$?)
-    \item If yes $\to$ Yes, it is an eigenvalue.
+    \item For each $\mathbf{b} \in \mathbb{R}^m$, $A\mathbf{x} = \mathbf{b}$ has a solution.
+    \item The columns of $A$ \textbf{span $\mathbb{R}^m$}.
+    \item $A$ has a \textbf{pivot position in every row}.
 \end{enumerate}
-\end{checkbox}
+\end{thmbox}
 
-\begin{checkbox}{"Is $\mathbf{x}$ an eigenvector?"}
-\textbf{Don't} find row reduce!
+\section*{III. Solution Sets Structure (1.5)}
+\begin{defbox}
+\textbf{Homogeneous $\mathbf{Ax=0}$}
+\begin{itemize}
+    \item Always consistent (trivial sol $\mathbf{x}=\mathbf{0}$).
+    \item Has a \textbf{nontrivial solution} ($\mathbf{x} \ne \mathbf{0}$) $\iff$ there is \textbf{at least one free variable}.
+\end{itemize}
+\end{defbox}
+\begin{thmbox}
+\textbf{Thm 1.6: Non-Homogeneous Solution Set}
+If $A\mathbf{x} = \mathbf{b}$ is consistent, the solution set is:
+$$
+\mathbf{x} = \mathbf{p} + \mathbf{v}_h \quad (\text{Particular} + \text{Homogeneous}) \text{}
+$$
+The set is a translation of the homogeneous solution space ($\text{Span}\{\mathbf{v}_1, \mathbf{v}_2, \dots\}$).
+\end{thmbox}
+
+\begin{exbox}
+\textbf{Parametric Vector Form (PVF)}
+\begin{itemize}
+    \item $\text{Setup (from Ex. 1): } x_1 = 5 - 3x_3$, $x_2 = -3 - 2x_3$, $x_3=t$ (free), $x_4 = 0$.
+\end{itemize}
+General solution in PVF (Decomposition):
+$$
+\mathbf{x} = \begin{bmatrix} x_1 \\ x_2 \\ x_3 \\ x_4 \end{bmatrix} = \underbrace{\begin{bmatrix} 5 \\ -3 \\ 0 \\ 0 \end{bmatrix}}_{\mathbf{p}} + t \underbrace{\begin{bmatrix} -3 \\ -2 \\ 1 \\ 0 \end{bmatrix}}_{\mathbf{v}_h} \text{}
+$$
+\end{exbox}
+
+\section*{IV. Linear Independence (1.7)}
+\begin{defbox}
+\begin{itemize}
+    \item \textbf{Linearly Independent (LI):} $x_1 \mathbf{v}_1 + \dots + x_p \mathbf{v}_p = \mathbf{0}$ has \textbf{only the trivial solution}.
+    \item \textbf{Tests for LD (Instant Dependence):}
+    \begin{itemize}
+        \item Contains the $\mathbf{0}$ vector.
+        \item More vectors than entries ($p>n$ in $\mathbb{R}^n$).
+        \item Matrix $A=[\mathbf{v}_1 \dots \mathbf{v}_p]$ has a \textbf{free variable}.
+    \end{itemize}
+\end{itemize}
+\end{defbox}
+\begin{thmbox}
+\textbf{Thm 1.7: Characterization of LD}
+A set $S$ is $\mathbf{LD} \iff$ at least one vector in $S$ is an \textbf{LC of the others}.
+\end{thmbox}
+
+\section*{V. Linear Transformations (1.8, 1.9)}
+\begin{thmbox}
+\textbf{Thm 1.10: The Standard Matrix $\mathbf{A}$}
+$T(\mathbf{x}) = A\mathbf{x}$, where $A$ is the unique standard matrix formed by transforming the standard basis vectors:
+$$
+A = [T(\mathbf{e}_1) \ T(\mathbf{e}_2) \ \dots \ T(\mathbf{e}_n)] \text{}
+$$
+\textbf{Thm 1.11 \& 1.12: One-to-One and Onto}
+Let $A$ be the $m \times n$ standard matrix for $T: \mathbb{R}^n \to \mathbb{R}^m$.
+\begin{itemize}
+    \item \textbf{T is Onto (Surjective) $\iff$} $A$ has a \textbf{pivot in every row}.
+    \item \textbf{T is One-to-One (Injective) $\iff$} $A$ has a \textbf{pivot in every column}.
+\end{itemize}
+\end{thmbox}
+
+\section*{VI. Matrix Algebra (2.1)}
+\begin{defbox}
+\textbf{Matrix Multiplication $\mathbf{AB}$}
+\begin{itemize}
+    \item Defined only if (\# cols in $A$) = (\# rows in $B$).
+    \item $\text{Col}_j(AB) = A \cdot \text{Col}_j(B)$.
+    \item \textbf{Warning:} $AB \ne BA$ generally.
+\end{itemize}
+\textbf{Transpose Properties}
+\begin{itemize}
+    \item $(A+B)^T = A^T + B^T$.
+    \item $(AB)^T = B^T A^T$ (\textbf{Reversal Rule}).
+\end{itemize}
+\end{defbox}
+
+\section*{VII. The Inverse (2.2, 2.3)}
+\begin{defbox}
+\textbf{2x2 Inverse}: For $A = \begin{bmatrix} a & b \\ c & d \end{bmatrix}$, if $ad-bc \ne 0$:
+$$ A^{-1} = \frac{1}{ad-bc} \begin{bmatrix} d & -b \\ -c & a \end{bmatrix} \text{} $$
+\textbf{Algorithm to find $\mathbf{A}^{-1}$}:
+Row reduce the augmented matrix $[\mathbf{A} \mid \mathbf{I}_n]$.
+If $A \sim \mathbf{I}_n$, then $[\mathbf{A} \mid \mathbf{I}_n] \sim [\mathbf{I}_n \mid \mathbf{A}^{-1}]$.
+\end{defbox}
+\begin{thmbox}
+\textbf{Properties of Inverses}
+\begin{itemize}
+    \item $(A^{-1})^{-1} = A$
+    \item $(AB)^{-1} = B^{-1}A^{-1}$ (Reversal Rule)
+    \item $(A^T)^{-1} = (A^{-1})^T$
+    \item (From Quiz 5) If $AB$ and $B$ are invertible, $A$ must be invertible. Proof: $A = (AB)B^{-1}$
+\end{itemize}
+\end{thmbox}
+
+\section*{VIII. Subspaces \& Rank (2.8, 2.9)}
+\begin{defbox}
+A \textbf{subspace} $H$ must satisfy:
 \begin{enumerate}
-    \item Multiply $A\mathbf{x}$.
-    \item Check result: Does $A\mathbf{x} = (\text{number}) \cdot \mathbf{x}$?
-    \item If result is scalar multiple of original $\mathbf{x}$, yes.
+    \item $\mathbf{0}$ is in $H$.
+    \item Closed under addition ($\mathbf{u}+\mathbf{v} \in H$).
+    \item Closed under scalar mult ($c\mathbf{u} \in H$).
 \end{enumerate}
-\end{checkbox}
+\begin{itemize}
+    \item \textbf{Col Space $\text{Col}(A)$:} Span of $A$'s columns. (Subspace of $\mathbb{R}^m$). \textbf{Basis:} The pivot columns of the \emph{original} matrix $A$.
+    \item \textbf{Nul Space $\text{Nul}(A)$:} Set of solutions to $A\mathbf{x}=\mathbf{0}$. (Subspace of $\mathbb{R}^n$). \textbf{Basis:} The vectors from the PVF of the solution.
+\end{itemize}
+\end{defbox}
+\begin{thmbox}
+\textbf{Rank-Nullity Theorem}
+For an $m \times n$ matrix $A$:
+$$ \text{rank}(A) + \text{dim}(\text{Nul}(A)) = n \text{} $$
+$$ (\text{\# pivot cols}) + (\text{\# free variables}) = (\text{\# total cols}) \text{} $$
+\end{thmbox}
 
-\end{multicols}
+\section*{IX. Determinants (3.1, 3.2)}
+\begin{defbox}
+\textbf{Cofactor Expansion} (across row $i$):
+$\det(A) = \sum_{j=1}^n a_{ij} C_{ij}$, where $C_{ij} = (-1)^{i+j} \det(A_{ij})$
+\begin{itemize}
+    \item \textbf{Example (across row 1 for 3x3)}:
+    $\det(A) = a_{11}\det(A_{11}) - a_{12}\det(A_{12}) + a_{13}\det(A_{13})$
+\end{itemize}
+\end{defbox}
+\begin{thmbox}
+\textbf{Properties \& Row Ops}
+\begin{itemize}
+    \item $\det(A)$ of a triangular matrix = product of its diagonal.
+    \item \textbf{Swap} ($R_i \leftrightarrow R_j$): Multiplies det by -1.
+    \item \textbf{Replacement} ($R_i + kR_j \to R_i$): \textbf{No change}.
+    \item \textbf{Scaling} ($kR_i \to R_i$): Multiplies det by $k$.
+    \item $A$ is invertible $\iff \det(A) \neq 0$.
+    \item $\det(AB) = \det(A) \det(B)$.
+    \item $\det(A^T) = \det(A)$.
+    \item \textbf{Quiz 8:} $\det(A^k) = (\det(A))^k$.
+    \item \textbf{Quiz 8:} $\det(A^{-1}) = 1/\det(A)$.
+    \item \textbf{Quiz 8:} $\det(kA) = k^n \det(A)$ (for $A_{n \times n}$).
+\end{itemize}
+\end{thmbox}
+
+\section*{X. Eigenvalues \& Eigenvectors (5.1, 5.2)}
+\begin{defbox}
+\begin{itemize}
+    \item \textbf{Eigenvector:} A non-zero vector $\mathbf{x}$ such that $A\mathbf{x} = \lambda\mathbf{x}$ for some scalar $\lambda$.
+    \item \textbf{Eigenvalue:} The scalar $\lambda$ above.
+    \item \textbf{Eigenspace:} The set of all solutions to $(A - \lambda I)\mathbf{x} = \mathbf{0}$. This is the $\text{Nul}(A - \lambda I)$.
+\end{itemize}
+\end{defbox}
+\begin{thmbox}
+\textbf{Finding Eigenvalues}
+\begin{itemize}
+    \item $\lambda$ is an eigenvalue $\iff (A - \lambda I)\mathbf{x} = \mathbf{0}$ has a non-trivial solution.
+    \item By the IMT, this is true $\iff \det(A - \lambda I) = 0$.
+    \item This is the \textbf{Characteristic Equation}.
+    \item The eigenvalues of a \textbf{triangular matrix} are the entries on its main diagonal.
+\end{itemize}
+\end{thmbox}
+
+\section*{XI. Additional Examples}
+
+\begin{exbox}
+\textbf{Ex (2.8/2.9): Find Rank/Nullity}
+For $A = \begin{bmatrix} 1 & 2 & 3 \\ 0 & 1 & 1 \end{bmatrix}$.
+\begin{itemize}
+    \item Pivots are in cols 1, 2. $\rank(A) = 2$.
+    \item Basis for $\colsp(A)$: $\left\{ \begin{bmatrix} 1 \\ 0 \end{bmatrix}, \begin{bmatrix} 2 \\ 1 \end{bmatrix} \right\}$.
+    \item Solve $A\mathbf{x}=\mathbf{0}$: $x_3$ is free. $x_2 = -x_3$. $x_1 = -2x_2 - 3x_3 = 2x_3 - 3x_3 = -x_3$.
+    \item $\mathbf{x} = x_3 \begin{bmatrix} -1 \\ -1 \\ 1 \end{bmatrix}$.
+    \item Basis for $\nullsp(A)$: $\left\{ \begin{bmatrix} -1 \\ -1 \\ 1 \end{bmatrix} \right\}$. Nullity is 1.
+\end{itemize}
+\end{exbox}
+
+\begin{exbox}
+\textbf{Ex (3.1/3.2): Find Determinant}
+For $B = \begin{bmatrix} 1 & 5 & 0 \\ 2 & 4 & -1 \\ 0 & -2 & 0 \end{bmatrix}$.
+\begin{itemize}
+    \item Expand down Col 3 (easiest):
+    \item $\det(B) = 0 \cdot C_{13} - (-1) \cdot \det \begin{bmatrix} 1 & 5 \\ 0 & -2 \end{bmatrix} + 0 \cdot C_{33}$
+    \item $\det(B) = 1 \cdot ((1)(-2) - (5)(0)) = -2$.
+\end{itemize}
+\end{exbox}
+
+\begin{exbox}
+\textbf{Ex (5.1/5.2): Find Eigenvalues}
+For $C = \begin{bmatrix} 1 & 6 \\ 5 & 2 \end{bmatrix}$.
+\begin{itemize}
+    \item Solve $\det(C - \lambda I) = 0$.
+    \item $\det \begin{bmatrix} 1-\lambda & 6 \\ 5 & 2-\lambda \end{bmatrix} = (1-\lambda)(2-\lambda) - 30 = 0$
+    \item $\lambda^2 - 3\lambda + 2 - 30 = 0 \implies \lambda^2 - 3\lambda - 28 = 0$
+    \item $(\lambda - 7)(\lambda + 4) = 0$
+    \item Eigenvalues are $\lambda_1 = 7, \lambda_2 = -4$.
+\end{itemize}
+\end{exbox}
+
+
+% --- THE BIG ONE ---
+\begin{tcolorbox}[
+    enhanced,
+    colback=myyellow!80!White,
+    colframe=Orange!50!Black,
+    boxrule=1pt,
+    fonttitle=\bfseries\sffamily,
+    coltitle=black,
+    colbacktitle=myyellow!80!White,
+    attach boxed title to top center={yshift=-2mm},
+    boxed title style={boxrule=0.5pt, colframe=Orange!50!Black},
+    title=THE INVERSE MATRIX THEOREM (CUMULATIVE),
+    sharp corners,
+    breakable
+]
+Let $A$ be a square $n \times n$ matrix.
+The following statements are all equivalent (all true or all false).
+\begin{enumerate}[label=(\alph*)]
+    \item $A$ is an invertible matrix.
+    \item $A$ is row equivalent to the $n \times n$ identity matrix $I_n$.
+    \item $A$ has $n$ pivot positions.
+    \item The equation $A\mathbf{x} = \mathbf{0}$ has only the trivial solution.
+    \item The columns of $A$ form a linearly independent set.
+    \item The linear transformation $\mathbf{x} \mapsto A\mathbf{x}$ is one-to-one.
+    \item The equation $A\mathbf{x} = \mathbf{b}$ has at least one solution for each $\mathbf{b}$ in $\mathbb{R}^n$.
+    \item The columns of $A$ span $\mathbb{R}^n$.
+    \item The linear transformation $\mathbf{x} \mapsto A\mathbf{x}$ maps $\mathbb{R}^n$ onto $\mathbb{R}^n$.
+    \item There is an $n \times n$ matrix $C$ such that $CA = I_n$.
+    \item There is an $n \times n$ matrix $D$ such that $AD = I_n$.
+    \item $A^T$ is an invertible matrix.
+    \item The columns of $A$ form a basis for $\mathbb{R}^n$.
+    \item $\text{Col}(A) = \mathbb{R}^n$.
+    \item $\text{dim}(\text{Col}(A)) = n$.
+    \item $\text{rank}(A) = n$.
+    \item $\text{Nul}(A) = \{\mathbf{0}\}$.
+    \item $\text{dim}(\text{Nul}(A)) = 0$.
+    \item The number $0$ is \textbf{not} an eigenvalue of $A$.
+    \item The determinant of $A$ is \textbf{not} zero ($\det(A) \neq 0$).
+\end{enumerate}
+\end{tcolorbox}
+% Note: Eigenvalue statement (s) is from Ch 5,
+% but is a key part of the IMT.
+
+\end{multicols} % <<< END THE ONLY MULTICOLS ENVIRONMENT >>>
 \end{document}
