--- a/linear/newversion.tex
+++ b/linear/newversion.tex
@@ -1,7 +1,7 @@
-\documentclass[9pt]{extarticle} % Smaller base font for maximum density
+\documentclass[9pt]{extarticle}
 \usepackage[T1]{fontenc}
 \usepackage{amsmath, amssymb}
-\usepackage[letterpaper, margin=0.3in]{geometry} % Extreme margins
+\usepackage[letterpaper, margin=0.3in]{geometry}
 \usepackage{multicol}
 \usepackage{enumitem}
 \usepackage[dvipsnames]{xcolor}
@@ -15,160 +15,195 @@
 \setlength{\parskip}{2pt}
 \setlength{\columnsep}{0.2in}
 
-% --- COLORS (High Contrast for Readability) ---
+% --- COLORS ---
 \definecolor{algo_bg}{HTML}{F0F8FF} % AliceBlue
 \definecolor{algo_frame}{HTML}{4682B4} % SteelBlue
-\definecolor{check_bg}{HTML}{FFF0F5} % LavenderBlush
-\definecolor{check_frame}{HTML}{C71585} % MediumVioletRed
+\definecolor{ex_bg}{HTML}{F0FFF0} % HoneyDew
+\definecolor{ex_frame}{HTML}{2E8B57} % SeaGreen
+\definecolor{thm_bg}{HTML}{FFF5EE} % Seashell
+\definecolor{thm_frame}{HTML}{CD5C5C} % IndianRed
 
 % --- CUSTOM BOXES ---
-% "Algorithm" Box - For Step-by-Step Instructions
+% "Algorithm" Box
 \newtcolorbox{algobox}[1]{
-    enhanced,
-    colback=algo_bg,
-    colframe=algo_frame,
-    fonttitle=\bfseries\sffamily,
-    title={#1},
+    enhanced, colback=algo_bg, colframe=algo_frame,
+    fonttitle=\bfseries\sffamily, title={#1},
     attach boxed title to top left={yshift=-2mm, xshift=2mm},
-    boxed title style={boxrule=0.5pt},
-    boxrule=0.5pt,
-    left=2pt, right=2pt, top=8pt, bottom=2pt,
-    arc=0pt, outer arc=0pt,
-    breakable
+    boxed title style={boxrule=0.5pt}, boxrule=0.5pt,
+    left=2pt, right=2pt, top=8pt, bottom=2pt, arc=0pt, outer arc=0pt, breakable
 }
-
-% "Sanity Check" Box - Quick Tests & Warnings
-\newtcolorbox{checkbox}[1]{
-    enhanced,
-    colback=check_bg,
-    colframe=check_frame,
-    fonttitle=\bfseries\sffamily,
-    title={#1},
+% "Example" Box
+\newtcolorbox{exbox}[1]{
+    enhanced, colback=ex_bg, colframe=ex_frame,
+    fonttitle=\bfseries\sffamily, title={#1},
     attach boxed title to top left={yshift=-2mm, xshift=2mm},
-    boxed title style={boxrule=0.5pt},
-    boxrule=0.5pt,
-    left=2pt, right=2pt, top=8pt, bottom=2pt,
-    arc=0pt, outer arc=0pt,
-    breakable
+    boxed title style={boxrule=0.5pt}, boxrule=0.5pt,
+    left=2pt, right=2pt, top=8pt, bottom=2pt, arc=0pt, outer arc=0pt, breakable
+}
+% "Theorem/Check" Box
+\newtcolorbox{thmbox}[1]{
+    enhanced, colback=thm_bg, colframe=thm_frame,
+    fonttitle=\bfseries\sffamily, title={#1},
+    attach boxed title to top left={yshift=-2mm, xshift=2mm},
+    boxed title style={boxrule=0.5pt}, boxrule=0.5pt,
+    left=2pt, right=2pt, top=8pt, bottom=2pt, arc=0pt, outer arc=0pt, breakable
 }
 
 \begin{document}
-% --- HEADER ---
-\textbf{\large MATH 231: FINAL EXAM PROCEDURAL REFERENCE} \hfill \textit{Battle Plan v1.0}
+\textbf{\large MATH 231: FINAL EXAM BATTLE PLAN (Ch 1-5)} \hfill \textit{Algorithms, Examples \& Core Theorems}
 \hrule
 \vspace{4pt}
 
 \begin{multicols}{2}
 
 % ============================================================
-% SECTION 1: EIGENVALUES & EIGENVECTORS (The Hard Part)
+% SECTION 1: EIGENVALUES (5.1, 5.2)
 % ============================================================
 
-\begin{algobox}{ALGORITHM: Finding Eigenvalues ($\lambda$) (3x3)}
-\textbf{Goal:} Solve $\det(A - \lambda I) = 0$.
+\begin{algobox}{ALGORITHM: Finding Eigenvalues ($\lambda$) & Vectors ($\mathbf{x}$)}
 \begin{enumerate}
-    \item \textbf{Setup:} Write matrix $A - \lambda I$. (Subtract $\lambda$ from diagonal).
-    \item \textbf{Scan for Zeros:} Is there a row/col with two zeros? Expand along that immediately.
-    \item \textbf{The "Factor First" Trick:} Before expanding, look at rows. Can you perform $R_i + R_j$ or $R_i - R_j$ to create a common factor?
-    \item \textbf{Expand:} Result will be a cubic: $-\lambda^3 + c_2\lambda^2 - c_1\lambda + c_0 = 0$.
-    \item \textbf{Solve for Roots:}
+    \item \textbf{Find $\lambda$:} Solve $\det(A - \lambda I) = 0$.
     \begin{itemize}
-        \item If you factored out $(\lambda - k)$ earlier, $\lambda=k$ is one root.
-        \item \textbf{Rational Root Thm:} Test integer factors of the constant term $c_0$ (e.g., $\pm 1, \pm 2$).
-        \item Use polynomial long division to reduce cubic to quadratic.
+        \item \textbf{3x3 Trick:} Before expanding, try row ops ($R_i + R_j$) to create zeros or factor out terms like $(2-\lambda)$.
+    \end{itemize}
+    \item \textbf{Find $\mathbf{x}$:} For each $\lambda$, solve $(A - \lambda I)\mathbf{x} = \mathbf{0}$.
+    \begin{itemize}
+        \item Plug $\lambda$ into matrix. Row reduce.
+        \item \textbf{Must} have a free variable (row of zeros).
+        \item Write solution in parametric vector form.
     \end{itemize}
 \end{enumerate}
 \end{algobox}
 
-\begin{algobox}{ALGORITHM: Finding Eigenvectors ($\mathbf{x}$)}
-\textbf{Goal:} Find basis for $\text{Nul}(A - \lambda I)$ for each $\lambda$.
+\begin{exbox}{EXAMPLE: Eigenvalues/Vectors (5.1, 5.2)}
+Find eigen-stuff for $A = \begin{bmatrix} 4 & -2 \\ 1 & 1 \end{bmatrix}$.
 \begin{enumerate}
-    \item Plug one specific $\lambda$ value back into matrix $A - \lambda I$.
-    \item \textbf{Row Reduce} this matrix. (You \emph{must} get at least one row of zeros. If not, your $\lambda$ is wrong).
-    \item Write equations (e.g., $x_1 - 2x_3 = 0 \implies x_1 = 2x_3$).
-    \item \textbf{Parametric Vector Form:} Separation variables.
-    $$ \mathbf{x} = x_2 \begin{bmatrix} \dots \end{bmatrix} + x_3 \begin{bmatrix} \dots \end{bmatrix} $$
-    \item The vectors are your eigenvectors.
+    \item \textbf{Char Eq:} $\det(A - \lambda I) = \det \begin{bmatrix} 4-\lambda & -2 \\ 1 & 1-\lambda \end{bmatrix}$
+    $$ = (4-\lambda)(1-\lambda) - (-2)(1) $$
+    $$ = (\lambda^2 - 5\lambda + 4) + 2 = \lambda^2 - 5\lambda + 6 $$
+    $$ (\lambda - 2)(\lambda - 3) = 0 \implies \lambda = 2, 3 $$
+    \item \textbf{Eigenvector for $\lambda = 2$:}
+    $$ (A - 2I) = \begin{bmatrix} 2 & -2 \\ 1 & -1 \end{bmatrix} \sim \begin{bmatrix} 1 & -1 \\ 0 & 0 \end{bmatrix} $$
+    $$ x_1 - x_2 = 0 \implies x_1 = x_2. \quad \text{Free: } x_2. $$
+    $$ \mathbf{x} = x_2 \begin{bmatrix} 1 \\ 1 \end{bmatrix} \implies \text{Basis: } \left\{ \begin{bmatrix} 1 \\ 1 \end{bmatrix} \right\} $$
 \end{enumerate}
-\end{algobox}
-
-\begin{checkbox}{QUICK CHECK: Triangular Matrices}
-If $A$ is Upper or Lower Triangular:
-\begin{itemize}
-    \item \textbf{Eigenvalues} = The entries on the main diagonal.
-    \item \textbf{Determinant} = Product of diagonal entries.
-    \item \textbf{Do not} compute characteristic poly. Just read them off.
-\end{itemize}
-\end{checkbox}
+\end{exbox}
 
 % ============================================================
-% SECTION 2: RANK, NULLITY & BASES
+% SECTION 2: RANK & NULLITY (2.8, 2.9)
 % ============================================================
 
 \begin{algobox}{ALGORITHM: Rank, Nullity, Col(A), Nul(A)}
-Given matrix $A$:
 \begin{enumerate}
-    \item \textbf{Step 1: Row Reduce} $A$ to REF (doesn't need to be RREF yet).
-    \item \textbf{Step 2: Identify Pivots.} Circle leading 1s.
-    \item \textbf{RANK} = Count of Pivots.
-    \item \textbf{NULLITY} = (Total Columns) - (Rank).
-    \item \textbf{BASIS for Col(A):}
-    \begin{itemize}
-        \item Look at REF. Which columns have pivots? (e.g., 1 and 3).
-        \item Go back to \textbf{ORIGINAL} matrix $A$.
-        \item Pick columns 1 and 3 from \textbf{original} $A$.
-    \end{itemize}
-    \item \textbf{BASIS for Nul(A):}
-    \begin{itemize}
-        \item Go to RREF.
-        \item Identify Free Variables (cols without pivots).
-        \item Write Basic Variables in terms of Free Variables.
-        \item Extract vectors (PVF). These are the basis.
-    \end{itemize}
+    \item \textbf{Row Reduce} $A$ to REF. Identify Pivot Columns.
+    \item \textbf{Rank} = \# of Pivots.
+    \item \textbf{Nullity} = \# of Free Variables (Total Cols - Rank).
+    \item \textbf{Basis Col(A):} Pivot columns from \textbf{ORIGINAL} matrix.
+    \item \textbf{Basis Nul(A):} Solve $A\mathbf{x}=\mathbf{0}$ (Parametric Form).
 \end{enumerate}
 \end{algobox}
 
+\begin{exbox}{EXAMPLE: Quiz 7 Problem (2.8, 2.9)}
+$A = \begin{bmatrix} 4 & 5 & 9 & -2 \\ 6 & 5 & 1 & 12 \\ 3 & 4 & 8 & -3 \end{bmatrix} \sim \begin{bmatrix} \mathbf{1} & 2 & 6 & -5 \\ 0 & \mathbf{1} & 5 & -6 \\ 0 & 0 & 0 & 0 \end{bmatrix}$
+\begin{enumerate}
+    \item \textbf{Pivots:} Columns 1 and 2.
+    \item \textbf{Rank:} 2. \quad \textbf{Nullity:} $4 - 2 = 2$.
+    \item \textbf{Basis Col(A):} Use Cols 1 \& 2 of \textbf{original} A.
+    $$ \left\{ \begin{bmatrix} 4 \\ 6 \\ 3 \end{bmatrix}, \begin{bmatrix} 5 \\ 5 \\ 4 \end{bmatrix} \right\} $$
+    \item \textbf{Basis Nul(A):} Solve $Ax=0$. $x_3, x_4$ are free.
+    $$ x_1 + 2x_2 + 6x_3 - 5x_4 = 0 $$
+    $$ x_2 + 5x_3 - 6x_4 = 0 \implies x_2 = -5x_3 + 6x_4 $$
+    $$ x_1 = -2(-5x_3 + 6x_4) - 6x_3 + 5x_4 = 4x_3 - 7x_4 $$
+    $$ \mathbf{x} = x_3 \begin{bmatrix} 4 \\ -5 \\ 1 \\ 0 \end{bmatrix} + x_4 \begin{bmatrix} -7 \\ 6 \\ 0 \\ 1 \end{bmatrix} $$
+\end{enumerate}
+\end{exbox}
+
 % ============================================================
-% SECTION 3: DETERMINANTS & INVERSES
+% SECTION 3: DETERMINANTS (3.1, 3.2)
 % ============================================================
 
 \begin{algobox}{ALGORITHM: Determinant Strategy}
 \begin{enumerate}
-    \item \textbf{2x2:} $ad - bc$.
-    \item \textbf{3x3 or larger:}
-    \begin{itemize}
-        \item \textbf{Row Ops Strategy (Fastest):} Use row replacements ($R_i + kR_j$) to create zeros below a pivot. (Does NOT change det).
-        \item \textbf{Swap?} Multiply result by $-1$.
-        \item \textbf{Scale?} Factor out $k$.
-        \item Once Triangular: Multiply diagonal entries.
-    \end{itemize}
-    \item \textbf{Cofactor Expansion:} Only do this if a row/col already has many zeros.
-    $$ \det(A) = a_{11}C_{11} + a_{12}C_{12} + \dots $$
+    \item \textbf{Row Ops:} $R_i + kR_j$ (No change). Swap (Negate).
+    \item \textbf{Triangular:} Multiply diagonal.
+    \item \textbf{Cofactor:} Use row with most zeros.
+    \item \textbf{Properties:} $\det(AB) = \det A \det B$, $\det(A^{-1}) = \frac{1}{\det A}$, $\det(A^T) = \det A$.
+    \item \textbf{Scaling:} $\det(kA) = k^n \det(A)$ (for $n \times n$).
 \end{enumerate}
 \end{algobox}
 
-\begin{algobox}{ALGORITHM: Inverse Matrix ($A^{-1}$)}
+\begin{exbox}{EXAMPLE: Quiz 8 Problem (3.1, 3.2)}
+$A = \begin{bmatrix} 2 & -2 & 3 \\ 3 & 1 & 2 \\ 1 & 3 & -1 \end{bmatrix}$. Find $\det(A)$.
+\begin{itemize}
+    \item \textbf{Cofactor expansion} (Row 1):
+    $$ 2 \begin{vmatrix} 1 & 2 \\ 3 & -1 \end{vmatrix} - (-2) \begin{vmatrix} 3 & 2 \\ 1 & -1 \end{vmatrix} + 3 \begin{vmatrix} 3 & 1 \\ 1 & 3 \end{vmatrix} $$
+    $$ = 2(-1-6) + 2(-3-2) + 3(9-1) $$
+    $$ = 2(-7) + 2(-5) + 3(8) = -14 - 10 + 24 = 0 $$
+    \item \textbf{Invertible?} No, because $\det(A) = 0$.
+\end{itemize}
+\end{exbox}
+
+\begin{exbox}{EXAMPLE: Determinant Properties (Quiz 8)}
+If $\det(A) = -2$ and $A$ is $3 \times 3$:
+\begin{itemize}
+    \item $\det(5A) = 5^3 \det(A) = 125(-2) = -250$.
+    \item $\det(A^3) = (\det A)^3 = (-2)^3 = -8$.
+\end{itemize}
+\end{exbox}
+
+% ============================================================
+% SECTION 4: INVERSE MATRIX (2.2, 2.3)
+% ============================================================
+
+\begin{algobox}{ALGORITHM: Finding Inverse $A^{-1}$}
 \begin{enumerate}
-    \item \textbf{2x2 Shortcut:}
-    $$ \begin{bmatrix} a & b \\ c & d \end{bmatrix}^{-1} = \frac{1}{ad-bc} \begin{bmatrix} d & -b \\ -c & a \end{bmatrix} $$
-    \item \textbf{3x3+ Algorithm:}
-    \begin{itemize}
-        \item Augment: $[ A \mid I ]$.
-        \item Row Reduce until left side is $I$: $[ I \mid A^{-1} ]$.
-        \item If you create a row of zeros on the left, $A$ is not invertible.
-    \end{itemize}
+    \item \textbf{2x2 Shortcut:} $\frac{1}{ad-bc} \begin{bmatrix} d & -b \\ -c & a \end{bmatrix}$
+    \item \textbf{3x3+ Algorithm:} Augment $[A \mid I]$. Row reduce.
+    \item If you get $[I \mid B]$, then $B = A^{-1}$.
+    \item If row of zeros appears on left, not invertible.
 \end{enumerate}
 \end{algobox}
 
+\begin{exbox}{EXAMPLE: 2x2 Inverse}
+$A = \begin{bmatrix} 1 & 2 \\ 3 & 4 \end{bmatrix}$. $\det = 4-6 = -2$.
+$$ A^{-1} = \frac{1}{-2} \begin{bmatrix} 4 & -2 \\ -3 & 1 \end{bmatrix} = \begin{bmatrix} -2 & 1 \\ 1.5 & -0.5 \end{bmatrix} $$
+\end{exbox}
+
 % ============================================================
-% SECTION 4: LINEAR INDEPENDENCE
+% SECTION 5: SYSTEMS & SPANS (1.1-1.4)
 % ============================================================
 
-\begin{checkbox}{TEST: Linear Independence}
-Set of vectors $\{\mathbf{v}_1, \dots, \mathbf{v}_p\}$.
+\begin{thmbox}{TEST: Existence \& Uniqueness (Thm 1.2)}
+Row reduce augmented matrix $[A \mid \mathbf{b}]$.
 \begin{enumerate}
-    \item \textbf{Matrix Check:} Form $A = [\mathbf{v}_1 \dots \mathbf{v}_p]$.
-    \item Row reduce.
+    \item \textbf{Consistent (Existence):} No row like $[0 \dots 0 \mid \text{nonzero}]$.
+    \item \textbf{Unique Solution:} Consistent AND No free variables (Pivot in every column of $A$).
+    \item \textbf{Infinite Solutions:} Consistent AND At least one free variable.
+\end{enumerate}
+\end{thmbox}
+
+\begin{thmbox}{TEST: Do cols of $A$ span $\mathbb{R}^m$? (Thm 1.4)}
+\begin{itemize}
+    \item \textbf{Yes $\iff$} $A$ has a pivot position in \textbf{every row}.
+    \item \textbf{Check:} Row reduce. Do you have a row of zeros? If yes, they do NOT span $\mathbb{R}^m$.
+\end{itemize}
+\end{thmbox}
+
+\begin{thmbox}{TEST: Solutions to $A\mathbf{x}=\mathbf{b}$ (Thm 1.6)}
+Solution = Particular + Homogeneous ($ \mathbf{x} = \mathbf{p} + \mathbf{v}_h $).
+\begin{itemize}
+    \item $\mathbf{p}$: Any vector solving $A\mathbf{p} = \mathbf{b}$.
+    \item $\mathbf{v}_h$: The general solution to $A\mathbf{x} = \mathbf{0}$.
+\end{itemize}
+\end{thmbox}
+
+% ============================================================
+% SECTION 6: LINEAR INDEPENDENCE (1.7)
+% ============================================================
+
+\begin{thmbox}{TEST: Linear Independence (Thm 1.7)}
+Set of vectors $\{\mathbf{v}_1, \dots, \mathbf{v}_p\}$. Form matrix $A$.
+\begin{enumerate}
     \item \textbf{Pivot in every column?} $\to$ Independent.
     \item \textbf{Free variable exists?} $\to$ Dependent.
 \end{enumerate}
@@ -176,31 +211,29 @@ Set of vectors $\{\mathbf{v}_1, \dots, \mathbf{v}_p\}$.
 \begin{itemize}
     \item More vectors than rows ($p > n$).
     \item The set contains the $\mathbf{0}$ vector.
-    \item One vector is a scalar multiple of another.
+    \item Multiples: One vector is a scalar multiple of another.
 \end{itemize}
-\end{checkbox}
+\end{thmbox}
 
 % ============================================================
-% SECTION 5: COMMON "TRICK" QUESTIONS
+% SECTION 7: LINEAR TRANSFORMATIONS (1.8, 1.9)
 % ============================================================
 
-\begin{checkbox}{"Is $\lambda$ an eigenvalue?"}
-\textbf{Don't} find characteristic poly!
+\begin{algobox}{ALGORITHM: Finding Standard Matrix $A$}
+For a transformation $T: \mathbb{R}^n \to \mathbb{R}^m$:
 \begin{enumerate}
-    \item Calculate matrix $A - \lambda I$.
-    \item Does this matrix have a non-trivial null space? (i.e., is it singular? Is $\det = 0$?)
-    \item If yes $\to$ Yes, it is an eigenvalue.
+    \item Find $T(\mathbf{e}_1), T(\mathbf{e}_2), \dots$ (Transform the identity cols).
+    \item $A = [T(\mathbf{e}_1) \quad T(\mathbf{e}_2) \quad \dots \quad T(\mathbf{e}_n)]$.
 \end{enumerate}
-\end{checkbox}
+\end{algobox}
 
-\begin{checkbox}{"Is $\mathbf{x}$ an eigenvector?"}
-\textbf{Don't} find row reduce!
-\begin{enumerate}
-    \item Multiply $A\mathbf{x}$.
-    \item Check result: Does $A\mathbf{x} = (\text{number}) \cdot \mathbf{x}$?
-    \item If result is scalar multiple of original $\mathbf{x}$, yes.
-\end{enumerate}
-\end{checkbox}
+\begin{thmbox}{TEST: One-to-One & Onto (Thm 1.11/1.12)}
+Row reduce standard matrix $A$.
+\begin{itemize}
+    \item \textbf{Onto (Surjective):} Pivot in every \textbf{ROW}. (Cols span $\mathbb{R}^m$).
+    \item \textbf{One-to-One (Injective):} Pivot in every \textbf{COLUMN}. (Cols are Linearly Independent).
+\end{itemize}
+\end{thmbox}
 
 \end{multicols}
 \end{document}
